# hisho-core-service/pkg/api/hisho-core-service.pb.go
@@ -183,7 +183,7 @@ type Task struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	Id        int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	Id        uint64                 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
 	Title     string                 `protobuf:"bytes,2,opt,name=title,proto3" json:"title,omitempty"`
 	Term      string                 `protobuf:"bytes,3,opt,name=term,proto3" json:"term,omitempty"`
 	CreatedAt *timestamppb.Timestamp `protobuf:"bytes,4,opt,name=created_at,json=createdAt,proto3" json:"created_at,omitempty"`
@@ -223,7 +223,7 @@ func (*Task) Descriptor() ([]byte, []int) {
 	return file_hisho_core_service_proto_rawDescGZIP(), []int{2}
 }
 
-func (x *Task) GetId() int64 {
+func (x *Task) GetId() uint64 {
 	if x != nil {
 		return x.Id
 	}
@@ -359,6 +359,53 @@ func (x *TasksResponse) GetTasks() []*Task {
 	return nil
 }
 
+type Msg struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Message string `protobuf:"bytes,1,opt,name=message,proto3" json:"message,omitempty"`
+}
+
+func (x *Msg) Reset() {
+	*x = Msg{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_hisho_core_service_proto_msgTypes[5]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *Msg) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Msg) ProtoMessage() {}
+
+func (x *Msg) ProtoReflect() protoreflect.Message {
+	mi := &file_hisho_core_service_proto_msgTypes[5]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Msg.ProtoReflect.Descriptor instead.
+func (*Msg) Descriptor() ([]byte, []int) {
+	return file_hisho_core_service_proto_rawDescGZIP(), []int{5}
+}
+
+func (x *Msg) GetMessage() string {
+	if x != nil {
+		return x.Message
+	}
+	return ""
+}
+
 var File_hisho_core_service_proto protoreflect.FileDescriptor
 
 var file_hisho_core_service_proto_rawDesc = []byte{
@@ -377,7 +424,7 @@ var file_hisho_core_service_proto_rawDesc = []byte{
 	0x12, 0x0a, 0x04, 0x63, 0x6f, 0x64, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x03, 0x52, 0x04, 0x63,
 	0x6f, 0x64, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x02, 0x20, 0x01,
 	0x28, 0x09, 0x52, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x22, 0xeb, 0x01, 0x0a, 0x04, 0x54, 0x61,
-	0x73, 0x6b, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x03, 0x52, 0x02,
+	0x73, 0x6b, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x52, 0x02,
 	0x69, 0x64, 0x12, 0x14, 0x0a, 0x05, 0x74, 0x69, 0x74, 0x6c, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28,
 	0x09, 0x52, 0x05, 0x74, 0x69, 0x74, 0x6c, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x74, 0x65, 0x72, 0x6d,
 	0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x74, 0x65, 0x72, 0x6d, 0x12, 0x39, 0x0a, 0x0a,
@@ -399,25 +446,33 @@ var file_hisho_core_service_proto_rawDesc = []byte{
 	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2e, 0x0a, 0x05, 0x74, 0x61, 0x73, 0x6b, 0x73, 0x18, 0x01,
 	0x20, 0x03, 0x28, 0x0b, 0x32, 0x18, 0x2e, 0x68, 0x69, 0x73, 0x68, 0x6f, 0x5f, 0x63, 0x6f, 0x72,
 	0x65, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x54, 0x61, 0x73, 0x6b, 0x52, 0x05,
-	0x74, 0x61, 0x73, 0x6b, 0x73, 0x2a, 0x26, 0x0a, 0x04, 0x54, 0x65, 0x72, 0x6d, 0x12, 0x09, 0x0a,
-	0x05, 0x4f, 0x54, 0x48, 0x45, 0x52, 0x10, 0x00, 0x12, 0x08, 0x0a, 0x04, 0x57, 0x45, 0x45, 0x4b,
-	0x10, 0x01, 0x12, 0x09, 0x0a, 0x05, 0x54, 0x4f, 0x44, 0x41, 0x59, 0x10, 0x02, 0x32, 0xe6, 0x01,
-	0x0a, 0x10, 0x48, 0x69, 0x73, 0x68, 0x6f, 0x43, 0x6f, 0x72, 0x65, 0x53, 0x65, 0x72, 0x76, 0x69,
-	0x63, 0x65, 0x12, 0x5e, 0x0a, 0x04, 0x50, 0x69, 0x6e, 0x67, 0x12, 0x1f, 0x2e, 0x68, 0x69, 0x73,
-	0x68, 0x6f, 0x5f, 0x63, 0x6f, 0x72, 0x65, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e,
-	0x50, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x20, 0x2e, 0x68, 0x69,
+	0x74, 0x61, 0x73, 0x6b, 0x73, 0x22, 0x1f, 0x0a, 0x03, 0x4d, 0x73, 0x67, 0x12, 0x18, 0x0a, 0x07,
+	0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x6d,
+	0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x2a, 0x26, 0x0a, 0x04, 0x54, 0x65, 0x72, 0x6d, 0x12, 0x09,
+	0x0a, 0x05, 0x4f, 0x54, 0x48, 0x45, 0x52, 0x10, 0x00, 0x12, 0x08, 0x0a, 0x04, 0x57, 0x45, 0x45,
+	0x4b, 0x10, 0x01, 0x12, 0x09, 0x0a, 0x05, 0x54, 0x4f, 0x44, 0x41, 0x59, 0x10, 0x02, 0x32, 0xc2,
+	0x02, 0x0a, 0x10, 0x48, 0x69, 0x73, 0x68, 0x6f, 0x43, 0x6f, 0x72, 0x65, 0x53, 0x65, 0x72, 0x76,
+	0x69, 0x63, 0x65, 0x12, 0x5e, 0x0a, 0x04, 0x50, 0x69, 0x6e, 0x67, 0x12, 0x1f, 0x2e, 0x68, 0x69,
 	0x73, 0x68, 0x6f, 0x5f, 0x63, 0x6f, 0x72, 0x65, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65,
-	0x2e, 0x50, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x13, 0x82,
-	0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x22, 0x08, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x69, 0x6e, 0x67, 0x3a,
-	0x01, 0x2a, 0x12, 0x72, 0x0a, 0x0e, 0x47, 0x65, 0x74, 0x54, 0x61, 0x73, 0x6b, 0x73, 0x42, 0x79,
-	0x54, 0x65, 0x72, 0x6d, 0x12, 0x1f, 0x2e, 0x68, 0x69, 0x73, 0x68, 0x6f, 0x5f, 0x63, 0x6f, 0x72,
-	0x65, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x54, 0x61, 0x73, 0x6b, 0x52, 0x65,
-	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x21, 0x2e, 0x68, 0x69, 0x73, 0x68, 0x6f, 0x5f, 0x63, 0x6f,
-	0x72, 0x65, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x54, 0x61, 0x73, 0x6b, 0x73,
-	0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16,
-	0x22, 0x11, 0x2f, 0x76, 0x31, 0x2f, 0x74, 0x61, 0x73, 0x6b, 0x73, 0x2f, 0x62, 0x79, 0x5f, 0x74,
-	0x65, 0x72, 0x6d, 0x3a, 0x01, 0x2a, 0x42, 0x09, 0x5a, 0x07, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70,
-	0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x2e, 0x50, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x20, 0x2e, 0x68,
+	0x69, 0x73, 0x68, 0x6f, 0x5f, 0x63, 0x6f, 0x72, 0x65, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
+	0x65, 0x2e, 0x50, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x13,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0d, 0x22, 0x08, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x69, 0x6e, 0x67,
+	0x3a, 0x01, 0x2a, 0x12, 0x76, 0x0a, 0x0e, 0x47, 0x65, 0x74, 0x54, 0x61, 0x73, 0x6b, 0x73, 0x42,
+	0x79, 0x54, 0x65, 0x72, 0x6d, 0x12, 0x1f, 0x2e, 0x68, 0x69, 0x73, 0x68, 0x6f, 0x5f, 0x63, 0x6f,
+	0x72, 0x65, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x54, 0x61, 0x73, 0x6b, 0x52,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x21, 0x2e, 0x68, 0x69, 0x73, 0x68, 0x6f, 0x5f, 0x63,
+	0x6f, 0x72, 0x65, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x54, 0x61, 0x73, 0x6b,
+	0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x20, 0x82, 0xd3, 0xe4, 0x93, 0x02,
+	0x1a, 0x22, 0x15, 0x2f, 0x76, 0x31, 0x2f, 0x74, 0x61, 0x73, 0x6b, 0x73, 0x2f, 0x67, 0x65, 0x74,
+	0x5f, 0x62, 0x79, 0x5f, 0x74, 0x65, 0x72, 0x6d, 0x3a, 0x01, 0x2a, 0x12, 0x56, 0x0a, 0x07, 0x41,
+	0x64, 0x64, 0x54, 0x61, 0x73, 0x6b, 0x12, 0x18, 0x2e, 0x68, 0x69, 0x73, 0x68, 0x6f, 0x5f, 0x63,
+	0x6f, 0x72, 0x65, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x54, 0x61, 0x73, 0x6b,
+	0x1a, 0x17, 0x2e, 0x68, 0x69, 0x73, 0x68, 0x6f, 0x5f, 0x63, 0x6f, 0x72, 0x65, 0x5f, 0x73, 0x65,
+	0x72, 0x76, 0x69, 0x63, 0x65, 0x2e, 0x4d, 0x73, 0x67, 0x22, 0x18, 0x82, 0xd3, 0xe4, 0x93, 0x02,
+	0x12, 0x22, 0x0d, 0x2f, 0x76, 0x31, 0x2f, 0x74, 0x61, 0x73, 0x6b, 0x73, 0x2f, 0x61, 0x64, 0x64,
+	0x3a, 0x01, 0x2a, 0x42, 0x09, 0x5a, 0x07, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -433,7 +488,7 @@ func file_hisho_core_service_proto_rawDescGZIP() []byte {
 }
 
 var file_hisho_core_service_proto_enumTypes = make([]protoimpl.EnumInfo, 1)
-var file_hisho_core_service_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
+var file_hisho_core_service_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
 var file_hisho_core_service_proto_goTypes = []interface{}{
 	(Term)(0),                     // 0: hisho_core_service.Term
 	(*PingRequest)(nil),           // 1: hisho_core_service.PingRequest
@@ -441,20 +496,23 @@ var file_hisho_core_service_proto_goTypes = []interface{}{
 	(*Task)(nil),                  // 3: hisho_core_service.Task
 	(*TaskRequest)(nil),           // 4: hisho_core_service.TaskRequest
 	(*TasksResponse)(nil),         // 5: hisho_core_service.TasksResponse
-	(*timestamppb.Timestamp)(nil), // 6: google.protobuf.Timestamp
+	(*Msg)(nil),                   // 6: hisho_core_service.Msg
+	(*timestamppb.Timestamp)(nil), // 7: google.protobuf.Timestamp
 }
 var file_hisho_core_service_proto_depIdxs = []int32{
-	6, // 0: hisho_core_service.Task.created_at:type_name -> google.protobuf.Timestamp
-	6, // 1: hisho_core_service.Task.updated_at:type_name -> google.protobuf.Timestamp
-	6, // 2: hisho_core_service.Task.done_at:type_name -> google.protobuf.Timestamp
+	7, // 0: hisho_core_service.Task.created_at:type_name -> google.protobuf.Timestamp
+	7, // 1: hisho_core_service.Task.updated_at:type_name -> google.protobuf.Timestamp
+	7, // 2: hisho_core_service.Task.done_at:type_name -> google.protobuf.Timestamp
 	0, // 3: hisho_core_service.TaskRequest.term:type_name -> hisho_core_service.Term
 	3, // 4: hisho_core_service.TasksResponse.tasks:type_name -> hisho_core_service.Task
 	1, // 5: hisho_core_service.HishoCoreService.Ping:input_type -> hisho_core_service.PingRequest
 	4, // 6: hisho_core_service.HishoCoreService.GetTasksByTerm:input_type -> hisho_core_service.TaskRequest
-	2, // 7: hisho_core_service.HishoCoreService.Ping:output_type -> hisho_core_service.PingResponse
-	5, // 8: hisho_core_service.HishoCoreService.GetTasksByTerm:output_type -> hisho_core_service.TasksResponse
-	7, // [7:9] is the sub-list for method output_type
-	5, // [5:7] is the sub-list for method input_type
+	3, // 7: hisho_core_service.HishoCoreService.AddTask:input_type -> hisho_core_service.Task
+	2, // 8: hisho_core_service.HishoCoreService.Ping:output_type -> hisho_core_service.PingResponse
+	5, // 9: hisho_core_service.HishoCoreService.GetTasksByTerm:output_type -> hisho_core_service.TasksResponse
+	6, // 10: hisho_core_service.HishoCoreService.AddTask:output_type -> hisho_core_service.Msg
+	8, // [8:11] is the sub-list for method output_type
+	5, // [5:8] is the sub-list for method input_type
 	5, // [5:5] is the sub-list for extension type_name
 	5, // [5:5] is the sub-list for extension extendee
 	0, // [0:5] is the sub-list for field type_name
@@ -526,6 +584,18 @@ func file_hisho_core_service_proto_init() {
 				return nil
 			}
 		}
+		file_hisho_core_service_proto_msgTypes[5].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*Msg); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -533,7 +603,7 @@ func file_hisho_core_service_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_hisho_core_service_proto_rawDesc,
 			NumEnums:      1,
-			NumMessages:   5,
+			NumMessages:   6,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
@@ -564,6 +634,8 @@ type HishoCoreServiceClient interface {
 	Ping(ctx context.Context, in *PingRequest, opts ...grpc.CallOption) (*PingResponse, error)
 	// get tasks for terms (today, week, other etc.)
 	GetTasksByTerm(ctx context.Context, in *TaskRequest, opts ...grpc.CallOption) (*TasksResponse, error)
+	// add new task
+	AddTask(ctx context.Context, in *Task, opts ...grpc.CallOption) (*Msg, error)
 }
 
 type hishoCoreServiceClient struct {
@@ -592,12 +664,23 @@ func (c *hishoCoreServiceClient) GetTasksByTerm(ctx context.Context, in *TaskReq
 	return out, nil
 }
 
+func (c *hishoCoreServiceClient) AddTask(ctx context.Context, in *Task, opts ...grpc.CallOption) (*Msg, error) {
+	out := new(Msg)
+	err := c.cc.Invoke(ctx, "/hisho_core_service.HishoCoreService/AddTask", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // HishoCoreServiceServer is the server API for HishoCoreService service.
 type HishoCoreServiceServer interface {
 	// ping pong
 	Ping(context.Context, *PingRequest) (*PingResponse, error)
 	// get tasks for terms (today, week, other etc.)
 	GetTasksByTerm(context.Context, *TaskRequest) (*TasksResponse, error)
+	// add new task
+	AddTask(context.Context, *Task) (*Msg, error)
 }
 
 // UnimplementedHishoCoreServiceServer can be embedded to have forward compatible implementations.
@@ -609,6 +692,9 @@ func (*UnimplementedHishoCoreServiceServer) Ping(context.Context, *PingRequest) 
 }
 func (*UnimplementedHishoCoreServiceServer) GetTasksByTerm(context.Context, *TaskRequest) (*TasksResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetTasksByTerm not implemented")
+}
+func (*UnimplementedHishoCoreServiceServer) AddTask(context.Context, *Task) (*Msg, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method AddTask not implemented")
 }
 
 func RegisterHishoCoreServiceServer(s *grpc.Server, srv HishoCoreServiceServer) {
@@ -651,6 +737,24 @@ func _HishoCoreService_GetTasksByTerm_Handler(srv interface{}, ctx context.Conte
 	return interceptor(ctx, in, info, handler)
 }
 
+func _HishoCoreService_AddTask_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Task)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(HishoCoreServiceServer).AddTask(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/hisho_core_service.HishoCoreService/AddTask",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(HishoCoreServiceServer).AddTask(ctx, req.(*Task))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _HishoCoreService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "hisho_core_service.HishoCoreService",
 	HandlerType: (*HishoCoreServiceServer)(nil),
@@ -662,6 +766,10 @@ var _HishoCoreService_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetTasksByTerm",
 			Handler:    _HishoCoreService_GetTasksByTerm_Handler,
+		},
+		{
+			MethodName: "AddTask",
+			Handler:    _HishoCoreService_AddTask_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
